Bug 1245996 - inspector: fix xul scrollbars stealing focus;r=pbro
Apply -moz-user-focus: normal; only on direct descendants of inspector
tabpanels and not on tabpanels themselves. Avoids XUL scrollbars
from stealing the focus when clicked.

Test added, run only on windows and linux

MozReview-Commit-ID: KnZpJDxfzj2

UltraBlame original commit: 08731b65f2423076ab07fc97345ad209c37742c1

--- a/devtools/client/inspector/inspector.css
+++ b/devtools/client/inspector/inspector.css
@@ -27,7 +27,7 @@
   max-width: 150px;
 }
 
-.inspector-tabpanel {
+.inspector-tabpanel > * {
   
 
 
